clarified what is plotted

--- a/f_over_h.ipynb
+++ b/f_over_h.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's plot $f/H$"
+    "Let's plot $f/H$ as color contours and $H$ in grey. "
    ]
   },
   {
