--- a/f_over_h.ipynb
+++ b/f_over_h.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Exploring f/H contours"
+    "# Exploring f/h contours"
    ]
   },
   {
@@ -90,7 +90,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Imagine that the ocean has a flat bottom, and depth $H=1000m$"
+    "Imagine that the ocean has a flat bottom, and depth (which in this case is equal to the thickness of the water column) $h=1000m$"
    ]
   },
   {
@@ -99,14 +99,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "H=1000*np.ones((20,20)) #For parts b-d, please replace this line"
+    "h=1000*np.ones((20,20)) #For parts b-d, please replace this line"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First let's plot $H$ (it is boring in the first part of the question, but it will help in the future)"
+    "First let's plot $h$ (it is boring in the first part of the question, but it will help in the future)"
    ]
   },
   {
@@ -115,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cs = plt.contourf(lon,lat,H,cmap='Greys')\n",
+    "cs = plt.contourf(lon,lat,h,cmap='Greys')\n",
     "plt.xlabel('Longitude')\n",
     "plt.ylabel('Latitude')\n",
     "plt.colorbar(cs)\n",
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's plot $f/H$ as color contours and $H$ in grey. "
+    "Let's plot $f/h$ as color contours and $h$ in grey. "
    ]
   },
   {
@@ -135,20 +135,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.contourf(lon,lat,H,cmap='Greys')\n",
+    "plt.contourf(lon,lat,h,cmap='Greys')\n",
     "\n",
-    "cs = plt.contour(lon,lat,f/H,levels=20)\n",
+    "cs = plt.contour(lon,lat,f/h,levels=20)\n",
     "plt.xlabel('Longitude')\n",
     "plt.ylabel('Latitude')\n",
     "plt.colorbar(cs)\n",
-    "plt.title('f/H')"
+    "plt.title('f/h')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Flow enters the domain on the left. In this question, you can assume that the flow is very slow, so the relative vorticity $\\zeta$ is much less than $f$. In this case, the flow must follow contours of $f/H$. "
+    "Flow enters the domain on the left. In this question, you can assume that the flow is very slow, so the relative vorticity $\\zeta$ is much less than $f$. In this case, the flow must follow contours of $f/h$. "
    ]
   },
   {
@@ -162,9 +162,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) Imagine that the bottom of the ocean is not flat. Replace the line `H=1000*np.ones((20,20))` above with\n",
+    "b) Imagine that the bottom of the ocean is not flat. Replace the line `h=1000*np.ones((20,20))` above with\n",
     "\n",
-    "`H=1000+10*np.cos(latg)*np.cos(long)`\n",
+    "`h=1000+10*np.cos(latg)*np.cos(long)`\n",
     "\n",
     "Describe what the new bathymetry looks like. Describe what happens to the flow. "
    ]
@@ -173,9 +173,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "c) Imagine that the bottom of the ocean is not flat. Now replace the line `H=1000*np.ones((20,20))` above with\n",
+    "c) Imagine that the bottom of the ocean is not flat. Now replace the line `h=1000*np.ones((20,20))` above with\n",
     "\n",
-    "`H=1000+50*np.cos(latg)*np.cos(long)`\n",
+    "`h=1000+50*np.cos(latg)*np.cos(long)`\n",
     "\n",
     "Describe what the new bathymetry looks like. Describe what happens to the flow."
    ]
@@ -184,9 +184,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "d) Imagine that the bottom of the ocean is not flat. Now replace the line `H=1000*np.ones((20,20))` above with\n",
+    "d) Imagine that the bottom of the ocean is not flat. Now replace the line `h=1000*np.ones((20,20))` above with\n",
     "\n",
-    "`H=1000-50*np.exp(-(long-10)**2)`\n",
+    "`h=1000-50*np.exp(-(long-10)**2)`\n",
     "\n",
     "Describe what the new bathymetry looks like. Describe what happens to the flow."
    ]
