--- a/f_over_h.ipynb
+++ b/f_over_h.ipynb
@@ -99,7 +99,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "h=1000*np.ones((20,20)) #For parts b-d, please replace this line"
+    "h=1000+10*np.cos(latg)*np.cos(long) #For parts b-d, please replace this line"
    ]
   },
   {
@@ -137,7 +137,7 @@
    "source": [
     "plt.contourf(lon,lat,h,cmap='Greys')\n",
     "\n",
-    "cs = plt.contour(lon,lat,f/h,levels=20)\n",
+    "cs = plt.contour(lon,lat,f/h,levels=30)\n",
     "plt.xlabel('Longitude')\n",
     "plt.ylabel('Latitude')\n",
     "plt.colorbar(cs)\n",
@@ -162,11 +162,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "b) Imagine that the bottom of the ocean is not flat. Replace the line `h=1000*np.ones((20,20))` above with\n",
+    "b) Imagine that the bottom of the ocean is not flat. Now replace the line `h=1000*np.ones((20,20))` above with\n",
     "\n",
-    "`h=1000+10*np.cos(latg)*np.cos(long)`\n",
+    "`h=1000-50*np.exp(-(long-10)**2)`\n",
     "\n",
-    "Describe what the new bathymetry looks like. Describe what happens to the flow. "
+    "Describe what the new bathymetry looks like. Describe what happens to the flow. Why?"
    ]
   },
   {
@@ -175,9 +175,9 @@
    "source": [
     "c) Imagine that the bottom of the ocean is not flat. Now replace the line `h=1000*np.ones((20,20))` above with\n",
     "\n",
-    "`h=1000+50*np.cos(latg)*np.cos(long)`\n",
+    "`h=1000+10*np.cos(latg)*np.cos(long)`\n",
     "\n",
-    "Describe what the new bathymetry looks like. Describe what happens to the flow."
+    "Describe what the new bathymetry looks like. Describe what happens to the flow. Why?"
    ]
   },
   {
@@ -186,9 +186,9 @@
    "source": [
     "d) Imagine that the bottom of the ocean is not flat. Now replace the line `h=1000*np.ones((20,20))` above with\n",
     "\n",
-    "`h=1000-50*np.exp(-(long-10)**2)`\n",
+    "`h=1000+100*np.cos(latg)*np.cos(long)`\n",
     "\n",
-    "Describe what the new bathymetry looks like. Describe what happens to the flow."
+    "Describe what the new bathymetry looks like. Describe what happens to the flow. Why?"
    ]
   },
   {
