added some comments

--- a/sverdrup.ipynb
+++ b/sverdrup.ipynb
@@ -20,6 +20,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Load some packages\n",
     "import xarray as xr\n",
     "import numpy as np\n",
     "from matplotlib import pyplot as plt\n",
@@ -32,6 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Here we load some real life wind and wind-stress curl data. \n",
     "scow = xr.open_dataset('http://chapman.ceoas.oregonstate.edu/thredds/dodsC/CIOSS/SCOW/Monthly/scow_monthly_maps.nc?latitude[0:1:559],longitude[0:1:1439],time[0:1:11],scow_wind_stress_curl[0:1:11][0:1:1439][0:1:559],scow_zonal_wind_stress[0:1:11][0:1:1439][0:1:559],scow_meridional_wind_stress[0:1:11][0:1:1439][0:1:559]'\n",
     "                      ,decode_times=False)\n",
     "scow"
@@ -54,6 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Define a function to plot vector arrows of the wind\n",
     "def quick_quiver(u, v, sampling_x=10, sampling_y=10,\n",
     "                 scalar=None, mag_max=None, **kwargs):\n",
     "    x = u.longitude\n",
@@ -77,6 +80,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Plot the wind and the wind stress curl\n",
     "quick_quiver(ds.scow_zonal_wind_stress, ds.scow_meridional_wind_stress,\n",
     "             scalar=ds.scow_wind_stress_curl,\n",
     "             mag_max=2, sampling_x=20,\n",
@@ -91,6 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Calculate the Sverdrup transport\n",
     "omega = 7.29e-5\n",
     "R = 6.3781e6\n",
     "f = 2 * omega * np.sin(np.deg2rad(ds.latitude))\n",
